# hps-readers

./: CMakeLists.txt  README.md
include/readers/: SvtDataReader.h
src/readers/: CMakeLists.txt  SvtDataReader.cxx  test_reader.cxx
